<!--

  Copyright (C) 2015, Jaguar Land Rover

  This program is licensed under the terms and conditions of the
  Mozilla Public License, version 2.0.  The full text of the
  Mozilla Public License is at https://www.mozilla.org/MPL/2.0/

-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".LockActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_delete_all_keys_certs" android:title="@string/delete_all_keys_certs"
        android:orderInCategory="101" app:showAsAction="never" />

    <item android:id="@+id/action_delete_server_certs" android:title="@string/delete_server_certs"
        android:orderInCategory="102" app:showAsAction="never" />

    <item android:id="@+id/action_restore_defaults" android:title="@string/restore_defaults"
        android:orderInCategory="103" app:showAsAction="never" />

    <item android:id="@+id/action_quit" android:title="@string/action_quit"
        android:orderInCategory="104" app:showAsAction="never" />
</menu>
